<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="comqueues.example.user.ormlitecrudexample.ui.MainActivity">


    <EditText
        android:id="@+id/nameEdiText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="106dp"
        android:hint="@string/enter_your_first_name" />

    <Button
        android:text="@string/add_first_and_last_name"
        android:id="@+id/addButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/nameEditext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/delete_by_first_name"
        android:id="@+id/deleteButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/addButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/edit_first_and_last_name"
        android:id="@+id/editButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_below="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/show_first_name_and_lastname"
        android:id="@+id/showButton"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
